# libaii

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  aii.c  aii.h  aim.c
